Bug 156754 - Can't rotate image by less than 0.5 degrees
Summary: Can't rotate image by less than 0.5 degrees
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 1.6.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-01-27 02:04 UTC by kjetilho
Modified: 2008-10-27 01:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kjetilho 2008-01-27 02:04:21 UTC
Version:           1.6.3 (using 3.5.8, Kubuntu (gutsy) 4:3.5.8-0ubuntu3.1)
Compiler:          Target: x86_64-linux-gnu
OS:                Linux (x86_64) release 2.6.22-14-generic

Even though the dialog offers a 0.1 accuracy for the rotation, it seems the internal accuracy is less.  When I try 0.4, it spends the usual amount of time, but the result is identical to the original image.  Also, rotation by 0.5 *looks* like it's more, but I haven't measured it.  (The image I tried this on is 2800 x 2800 pixels.)
Comment 1 Halla Rempt 2008-02-06 11:47:13 UTC
Casper, can you look into this? Would it be very hard to support?
Comment 2 Hanno 2008-10-26 12:01:28 UTC
bug is still present in koffice2-krita-1.9.98.1-34.2.x86_64
Rotation sub 0.5° does not work, whereas 0.5° is effective
Comment 3 Halla Rempt 2008-10-26 12:07:06 UTC
Ok, that makes it confirmed. I still think Casper should look at it, not me :-)
Comment 4 Elián Hanisch 2008-10-26 17:57:52 UTC
present in krita2 beta2, can't rotate less than 0.5, and rotating 0.6 seems to have the same effect than 0.5

note: the dialog offers 0.01 degrees of accuracy
Comment 5 Sven Langkamp 2008-10-27 01:05:23 UTC
SVN commit 876284 by langkamp:


Don't cast angle to integer, so that it's possible to rotate less than
one degree

BUG:156754


 M  +4 -4      dlg_rotateimage.cc  
 M  +1 -1      dlg_rotateimage.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=876284