Don't cast angle to integer, so that it's possible to rotate less than one degree

BUG:156754

svn path=/trunk/koffice/; revision=876284